Improved book citation

--- a/Tesis.tex
+++ b/Tesis.tex
@@ -202,10 +202,11 @@
 \newcommand{\quotesection}[1]{{\color{SectionBlue}\textbf{Sección \ref{#1}}}}
 \newcommand{\quotesubsection}[1]{{\color{SubSectionBlue}\textbf{Sección \ref{#1}}}}
 \newcommand{\quotesubsubsection}[1]{{\color{SubSubSectionBlue}\textbf{Sección \ref{#1}}}}
-\newcommand{\quotefigure}[1]{{\color{MyDarkGreen}\textbf{Figura \ref{#1}}}}
+\newcommand{\reffigure}[1]{{\color{MyDarkGreen}\textbf{Figura \ref{#1}}}}
 \newcommand{\quotetable}[1]{{\color{MyDarkGreen}\textbf{Tabla \ref{#1}}}}
 \newcommand{\quoteequation}[1]{{\color{MyDarkGreen}\textbf{Ecuación \ref{#1}}}}
 \newcommand{\textapproxtilde}{\raisebox{-0.55ex}{\textasciitilde}}
+\newcommand{\citetbookchapter}[2]{\citet*[\textcolor{MyLightBlue}{Capítulo #2}]{#1}}
 %------------------------------------------------------------------------------------
 \geometry{
 	paper=a4paper, % Change to letterpaper for US letter
