--- a/ref.bib
+++ b/ref.bib
@@ -84,19 +84,17 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   MONTH     = {February}
 }
 
-@inbook{astronomyPhysicalPerspective::chapter5_binaryStars,
+@book{astronomyPhysicalPerspective,
   AUTHOR    = {Marc L. Kutner},
   TITLE     = {Astronomy A Physical Perspective},
   PUBLISHER = {Cambridge University Press},
-  CHAPTER   = {5 - Binary stars and stellar masses},
   EDITION   = {2},
   YEAR      = {2017},
   MONTH     = {February}
 }
 
-@inbook{fundamentalAstronomy::chapter10_binaryStars,
+@book{fundamentalAstronomy,
   AUTHOR         = {Hannu Karttunen and Pekka Kröger and Heikki Oja and Markku Poutanen and Karl Johan Donner},
-  CHAPTER        = {10},
   EDITOR         = {},
   PAGES          = {},
   PUBLISHER      = {Springer},
@@ -104,9 +102,8 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   YEAR           = {2017}
 }
 
-@inbook{anIntroStellarAstro::chapter1_basicConcepts,
+@book{anIntroStellarAstro,
   AUTHOR         = {Francis LeBlanc},
-  CHAPTER        = {1},
   EDITOR         = {},
   PAGES          = {},
   PUBLISHER      = {John Wiley \& Sons Ltd.},
@@ -114,19 +111,8 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   YEAR           = {2010}
 }
 
-@inbook{anIntroStellarAstro::chapter2_stellarFormation,
-  AUTHOR         = {Francis LeBlanc},
-  CHAPTER        = {2},
-  EDITOR         = {},
-  PAGES          = {},
-  PUBLISHER      = {John Wiley \& Sons Ltd.},
-  TITLE          = {An Introduction to Stellar Astrophysics},
-  YEAR           = {2010}
-}
-
-@inbook{anIntroTheoryStellarStructureEvolution::chapter2_eqsStellarEvolution,
+@book{anIntroTheoryStellarStructureEvolution,
   AUTHOR         = {Dina Prialnik},
-  CHAPTER        = {2},
   EDITOR         = {},
   PAGES          = {},
   PUBLISHER      = {Cambridge University Press},
