--- a/Metodologia/Secciones/ModeloComputacional/Subsecciones/EstimacionesIniciales.tex
+++ b/Metodologia/Secciones/ModeloComputacional/Subsecciones/EstimacionesIniciales.tex
@@ -7,7 +7,7 @@ distintos métodos para generar los las primeras estimaciones de parámetros
 físicos del sistema. El estimador \textbf{EBAI-KNN} para estimar los siguientes
 parámetros: el \textit{tiempo de conjunción superior} (\code{t0\_supconj}), la
 \textit{razón de temperaturas} (\code{teffratio}), la \textit{inclinación
-orbital} (\code{incl@binary}), el \textit{factor de relleno}
+	orbital} (\code{incl@binary}), el \textit{factor de relleno}
 (\textit{fillout factor} en inglés, \code{fillout\_factor}), y la
 \textit{razón de masas} (\code{q}). A pesar que dentro de PHOEBE estén
 implementados estimadores adicionales, solo se puede aplicar el
@@ -29,7 +29,7 @@ una combinación de curvas de luz de Gaia e Iturbide. El experimento completo
 junto a sus curvas de luz sintéticas correspondientes se pueden ver en el
 Notebook antedicho, acompañado de las gráficas resultantes de cada estimador.
 
-\subsubsection{Elección de Modelo Inicial}
+\subsubsection{Elección del Modelo Inicial}
 \label{metodologia:modelocomputacional:estimacionesiniciales:eligiendomodeloinicial}
 
 Una consideración importante en el proceso de modelación computacional es la
@@ -39,34 +39,44 @@ más parámetros pueden estar en un estado de degeneración, donde existe una
 relación lineal entre estos, lo cual significa que no existe una solución única
 correcta del sistema. Para decidir entre los varios estimadores se tomó como
 criterio de selección el ajuste del "forward model" a los datos mediante la
-estadística $\chi^2$. Estos se pueden ver en la figura \ref{chiSqrdFigure}.
-Partiendo de la medición del ajuste de cada modelo se ve que
-\code{ebai\_knn\_raw} y \code{ebai\_knn\_lc\_iturbide\_raw} son los que mejor se
-acoplan a los datos observacionales. La optimización de parámetros se llevó a
-cabo partiendo de las estimaciones de \code{ebai\_knn\_raw}, el cual de entrada
-recibió las cuatro curvas de luz de este trabajo (3 de Gaia, 1 de Iturbide). El
-resultado inicial del modelo se puede ver en la figura
-\ref{ebaiKnnRawEstimateModel}, junto a los parámetros del modelo en la tabla \ref{ebaiKnnInitialEstimationsValues}.
+estadística $\chi^2$. Estos se pueden ver en la \reffigure{chiSqrdFigure}.
+Viendo solo la medida de ajuste $\chi^2$ total para cada modelo se llegaría a la
+conclusión que el modelo \code{ebai\_knn\_iturbide\_aviles\_raw\_solution} es el
+que más coincide con los datos observacionales. Sin embargo, es necesario ver el
+ajuste a cada curva de luz individual; la curva de luz obtenida de Iturbide
+tiene mayor dispersión y puntos de valor que cualquiera de las otras curvas. Es
+por esta razón que el $\chi^2$ de \code{lc\_iturbide\_aviles\_raw} es varias
+ordenes de magnitud mayor que cualquier otro estimador. Por lo tanto se eligió
+las estimaciones de \code{ebai\_knn\_gaia\_norm\_solution}, el cual utilizó la
+fotometría de Gaia normalizada. Los parámetros de este estimador fueron
+idénticos al estimador que utilizó los datos directos de la base de datos de
+Gaia. El resultado inicial del modelo se puede ver en la
+\reffigure{ebaiKnnGaiaEstimateModel}, junto a los parámetros del modelo en la
+\quotetable{ebaiKnnInitialEstimationsValues}.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.43]{Metodologia/Secciones/ModeloComputacional/Figures/EstimadoresChiResultados.png}
-	
-	\caption{Resultados del ajuste ($\chi^2$) de los modelos sintéticos generados
-	utilizando los parámetros de los estimadores. Cada estadística fue calculada
-	con respecto a todos los datos observacionales disponibles, sin importar las
-	combinaciones de curvas de luz utilizadas para hacer la estimación.
-	\code{raw\_model} corresponde al modelo inicial que ofrece PHOEBE a través de
-	la función \code{phoebe.default\_contact\_binary()}.} 
+	\includegraphics[scale=0.4]{Metodologia/Secciones/ModeloComputacional/Figures/EstimadoresChiResultados.png}
+
+	\caption{Resultados del ajuste ($\chi^2$) de los modelos sintéticos
+		generados utilizando los parámetros de los estimadores. Cada estadística fue
+		calculada con respecto a todos los datos observacionales disponibles, sin
+		importar las combinaciones de curvas de luz utilizadas para hacer la
+		estimación. \code{raw\_model} corresponde al modelo inicial que ofrece
+		PHOEBE a través de la función \code{phoebe.default\_contact\_binary()}. Los
+		nombres de los estimadores en el eje vertical de la gráfica indican los
+		datos observacionales utilizados para cada estimación de parámetros.}
 	\label{chiSqrdFigure}
 \end{figure}
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.5]{Metodologia/Secciones/ModeloComputacional/Figures/ebai_knn_raw_estimacion.png}
-	
+	\xincludegraphics[scale=0.5]{Metodologia/Secciones/ModeloComputacional/Figures/ebaiKnnIturbideNorm.png}
+	\xincludegraphics[scale=0.5]{Metodologia/Secciones/ModeloComputacional/Figures/ebaiKnnGaiaRaw.png}
+	\xincludegraphics[scale=0.5]{Metodologia/Secciones/ModeloComputacional/Figures/ebaiKnnZtf.png}
+
 	\caption{Modelos sintéticos del modelo utilizando los parámetros estimados
-	por \code{ebai\_knn\_raw\_solver} junto a los residuos en los flujos para
+	por \code{ebai\_knn\_gaia\_norm\_solver} junto a los residuos en los flujos para
 	cada curva de luz. Estos modelos fueron sintetizados utilizando un factor de
 	escala de flujos flexible, utilizando la opción \code{pblum\_mode =
 	"dataset\_scaled"}, el cual nos permite analizar la morfología del modelo
@@ -74,7 +84,7 @@ resultado inicial del modelo se puede ver en la figura
 	parámetros relacionados con la luminosidad de cada componente, como las
 	temperaturas absolutas de ambas estrellas. Estos parámetros son ajustados en
 	los siguientes pasos de afinación del modelo.}
-	\label{ebaiKnnRawEstimateModel}
+	\label{ebaiKnnGaiaEstimateModel}
 \end{figure}
 
 % TODO: style table
@@ -83,23 +93,22 @@ resultado inicial del modelo se puede ver en la figura
 	\begin{tabular}{|l|l|}
 		\hline
 		% \rowcolor{blue}
-		\thead{Parámetro} & \thead{Valor} \\
+		\thead{Parámetro}                        & \thead{Valor} \\
 		\hline
-		\code{t0\_supconj@binary} & 0.06841 d \\
+		\code{t0\_supconj@binary}                & -0.03748 d    \\
 		\hline
-		\code{teffratio@binary} & 0.99560 \\
+		\code{teffratio@binary}                  & 0.98573       \\
 		\hline
-		\code{incl@binary} & 1.25572 rad \\
+		\code{incl@binary}                       & 71.07442 deg  \\
 		\hline
-		\code{fillout\_factor@contact\_envelope} & 0.51640 \\
+		\code{fillout\_factor@contact\_envelope} & 0.18522       \\
 		\hline
-		\code{q@binary} & 3.49495 \\
+		\code{q@binary}                          & 1.85648       \\
 		\hline
-
 	\end{tabular}
 	\caption{Resultados adoptados de las estimaciones iniciales, utilizando el
-		estimador cuyos datos de entrada fueron las cuatro curvas de luz
-		disponibles. Las unidades de cada valor son especificadas excepto para
-		los parámetros adimensionales.}
+		estimador cuyos datos de entrada fueron solo datos de Gaia. Las unidades
+		de cada valor son especificadas excepto para los parámetros
+		adimensionales.}
 	\label{ebaiKnnInitialEstimationsValues}
 \end{table}
