Combined sections of Star section Improved Formation subsection

--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -1,7 +1,7 @@
 \chapter{Introducción}
 
-\input{Introduccion/Subsecciones/Estrella/Estrella.tex}
-\input{Introduccion/Subsecciones/SistemasBinarios.tex}
+\input{Introduccion/Estrella.tex}
+\input{Introduccion/SistemasBinarios.tex}
 \input{Introduccion/Subsecciones/VariablesCataclismicas.tex}
-\input{Introduccion/Subsecciones/EnanaBlanca.tex}
+% \input{Introduccion/Subsecciones/EnanaBlanca.tex}
 \input{Introduccion/Subsecciones/EnanaRoja.tex}
