--- a/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
+++ b/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
@@ -14,7 +14,7 @@ Usando un mallado suficientemente fino para explorar el espacio de frecuencias
 se puede encontrar la frecuencia de mayor potencia, indicando el periodo orbital
 del sistema; al mismo tiempo, para restringir esta malla de periodos se impuso
 un límite máximo de 1 día, basado en las primeras observaciones de Iturbide. El
-espectro de frecuencias se encuentra en la \quotefigure{periodogramaLSFrecs}. 
+espectro de frecuencias se encuentra en la \reffigure{periodogramaLSFrecs}. 
 
 \begin{figure}[!h]
 	\centering
@@ -37,7 +37,7 @@ modelar la curva de luz en fase como una Gaussiana doble, el modelo aceptado
 para una binaria eclipsante. %TODO: agrega bibliografía
 Utilizando la segunda armónica de la frecuencia de más alta potencia se puede
 ver esta forma esperada de la curva de luz, como se puede ver en la
-\quotefigure{gaiaIturbideZtfPhaseFold}. El periodo orbital encontrado es de
+\reffigure{gaiaIturbideZtfPhaseFold}. El periodo orbital encontrado es de
 8.005607976 horas.
 
 \begin{figure}[!h]
