Started optimizers section

--- a/Metodologia/Secciones/ModeloComputacional/ModeloComputacional.tex
+++ b/Metodologia/Secciones/ModeloComputacional/ModeloComputacional.tex
@@ -10,4 +10,5 @@ plasma el proceso que se llevó a cabo para llegar a una solución fotométrica 
 sistema \atoObjIdNoSpace; esta solución no es única en el sentido que otra
 combinación de parámetros podría llegar a las mismas conclusiones.
 
-\input{Metodologia/Secciones/ModeloComputacional/Subsecciones/Estimadores/EstimacionesIniciales}
+\input{Metodologia/Secciones/ModeloComputacional/Subsecciones/EstimacionesIniciales}
+\input{Metodologia/Secciones/ModeloComputacional/Subsecciones/Optimizaciones.tex}
