Re-named quote equation command for better Intellisense

--- a/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
+++ b/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
@@ -7,7 +7,7 @@ embargo, estas cuentas crudas no son adecuadas para el ajuste de modelo con
 PHOEBE; estas producen resultados no físicos cuando son utilizadas sin
 tratamiento adicional. Para esto las magnitudes determinadas en la sección
 anterior se convierten a flujos normalizados con la
-\quoteequation{normFlujosEcuacion}. Esta transformación fue aplicada a todas las
+\refequation{normFlujosEcuacion}. Esta transformación fue aplicada a todas las
 curvas de luz recabadas (Gaia, ZTF, Iturbide) para poder trabajar con datos
 consistentes al momento de desarrollar el modelo computacional en PHOEBE.
 
