--- a/Observaciones/Secciones/Fotometria.tex
+++ b/Observaciones/Secciones/Fotometria.tex
@@ -132,7 +132,7 @@ Para obtener una magnitud diferencial de \atoObjId se necesita de una estrella
 de referencia cuya magnitud en el visible es conocida y bien estudiada.
 \compstarId ha sido observada por varios sondeos, por lo cual se ha medido su
 magnitud en el visible de 11.57. Utilizando esta estrella conocida podemos
-calcular la magnitud diferencial de \atoObjId con la \quoteequation{observaciones:fotometriadiferencial:magdiferencialec}. Una gran ventaja de
+calcular la magnitud diferencial de \atoObjId con la \refequation{observaciones:fotometriadiferencial:magdiferencialec}. Una gran ventaja de
 la fotometría diferencial a comparación de magnitudes absolutas es que llega a
 minimizar los efectos causados por obstrucciones del cielo, como nubes
 intermitentes o celdas turbulentas en la atmósfera. Los resultados para un día
