--- a/Tesis.tex
+++ b/Tesis.tex
@@ -204,7 +204,7 @@
 \newcommand{\quotesubsubsection}[1]{{\color{SubSubSectionBlue}\textbf{Sección \ref{#1}}}}
 \newcommand{\reffigure}[1]{{\color{MyDarkGreen}\textbf{Figura \ref{#1}}}}
 \newcommand{\quotetable}[1]{{\color{MyDarkGreen}\textbf{Tabla \ref{#1}}}}
-\newcommand{\quoteequation}[1]{{\color{MyDarkGreen}\textbf{Ecuación \ref{#1}}}}
+\newcommand{\refequation}[1]{{\color{MyDarkGreen}\textbf{Ecuación \ref{#1}}}}
 \newcommand{\textapproxtilde}{\raisebox{-0.55ex}{\textasciitilde}}
 \newcommand{\citetbookchapter}[2]{\citet*[\textcolor{MyLightBlue}{Capítulo #2}]{#1}}
 %------------------------------------------------------------------------------------
