Local Thermodynamic Equilibrium subsection

--- a/Introduccion/Estrella.tex
+++ b/Introduccion/Estrella.tex
@@ -82,7 +82,7 @@ respecto a su temperatura y luminosidad.
 	\label{protostarEvolutionFig}
 \end{figure}
 
-\subsection{Balance de Fuerzas}
+\subsection{Secuencia Principal}
 
 Una vez que una estrella llegue su etapa de secuencia principal el sistema se
 vuelve estable a largas escalas temporales. En este estado la estrella deja de
@@ -134,6 +134,33 @@ material circundante\textemdash se obtiene la
 
 \subsubsection{Equilibrio Termodinámico Local}
 
+Una estrella como resultado de su mecanismo de transporte de energía no está en
+un estado de equilibrio térmico. El núcleo, en donde se produce la gran mayoría
+de energía en una estrella, está a ordenes de magnitud más caliente que la
+fotosfera. Este transporte de energía ocurre principalmente por medio de
+\textit{radiación} y \textit{convección}; la conducción no juega un papel
+significativo. Para que una estrella se mantenga estable durante los miles de
+millones de años de su vida debe de estar en un tipo de equilibrio, donde cada
+estrato su volumen mantenga una composición estable a largas escalas de tiempo,
+lo cual implica que el flujo de energía que ingresa a cada capa es igual a la
+cantidad de energía que libera a la siguiente capa. Esto lleva a cabo otra
+simplificación en el modelo estelar: una estrella la podemos considerar como un
+sistema en \textbf{equilibrio termodinámico local}.
+
+Para declarar que un sistema está en equilibrio termodinámico local debemos
+considerar el \textbf{camino libre medio} de una partícula en el interior
+estelar. Considerando la distancia recorrida por un fotón antes de ser absorbido
+o esparcido por otra partícula obtenemos esta medición, la cual dicta la escala
+de espacio del transporte de energía comparado a la escala espacial de la
+estrella. En el caso de que el camino libre medio sea significativamente menor
+que las dimensiones espaciales de la estrella su volumen se puede dividir en
+celdas discretas de tamaño despreciable, en las cuales cada una de las celdas
+está en equilibrio termodinámico dentro de si mismas
+\citetbookchapter{anIntroTheoryStellarStructureEvolution}{2}. Por lo tanto, la
+estructura de la estrella se puede determinar siempre y cuando se sepa la masa
+de la estrella, y la densidad, temperatura, y composición química de cada punto
+en su interior.
+
 \subsection{Evolución}
 
 En el transcurso del tiempo cada estrella será sujeta a ciertos cambios en su
@@ -155,7 +182,7 @@ principal}.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.6]{Introduccion/Figures/Figura Evolucion_MS_Astronomy_Physical_Perspective.png}
+	\includegraphics[scale=0.5]{Introduccion/Figures/Figura Evolucion_MS_Astronomy_Physical_Perspective.png}
 	\caption{Evolución de estrellas de la secuencia principal basado en su masa
 	inicial en el diagrama HR. La línea punteada representa la posición de la
 	estrella en el primer momento que se integra a la secuencia principal. Al
