Started eclipsing binaries subsection Formatting changes

--- a/Introduccion/SistemasBinarios.tex
+++ b/Introduccion/SistemasBinarios.tex
@@ -22,7 +22,7 @@ datos del sistema; un sistema astrométrico sería indistinguible de uno
 espectroscópico si uno intenta identificar las componentes individuales a simple
 vista, o con un telescopio demasiado débil para el trabajo.
 
-Las \textit{binarias visuales} son aquellos cuya separación orbital aparente es
+Las \textbf{binarias visuales} son aquellos cuya separación orbital aparente es
 suficientemente grande para distinguir las dos estrellas individuales en la
 bóveda celeste. A pesar de que se puede trazar la órbita de la secundaria con
 varios años de observaciones, se requiere de cálculos adicionales para
@@ -31,20 +31,20 @@ del sistema con respecto al eje de observación hacia la Tierra; solo es posible
 observar \quotes{una proyección del elipse orbital relativo en el plano del
 cielo,} aunque esto se puede superar usando el hecho de que la estrella primaria
 aparentemente inmóvil debe de estar presente \quotes{en un punto focal de la
-órbita relativa.} \citet{fundamentalAstronomy::chapter10_binaryStars}
+órbita relativa.} \citetbookchapter{fundamentalAstronomy}{10}
 
-Las \textit{binarias espectroscópicas} presentan variaciones periódicas en sus
+Las \textbf{binarias espectroscópicas} presentan variaciones periódicas en sus
 espectros, en donde las líneas espectrales detectadas \quotes{oscilan
 periodicamente alrededor de la longitud de onda promedio}
-\citet{astronomyPhysicalPerspective::chapter5_binaryStars}. Esto se observa
-debido al \textbf{desplazamiento de Doppler}, lo cual causa que la frecuencia de
+\citetbookchapter{astronomyPhysicalPerspective}{5}. Esto se observa
+debido al \textit{desplazamiento de Doppler}, lo cual causa que la frecuencia de
 un fotón se recorra hacia frecuencias más pequeñas (azules) o más grandes
 (rojas) dependiendo de su velocidad radial con respecto al observador, si se va
 acercando o alejando, respectivamente. Estas también pueden identificadas al
 observar dos distintos grupos de líneas espectrales, el cual es resultado de la
 contribución de ambas estrellas.
 
-Las \textit{binarias astrométricas}, al igual que las espectroscópicas, solo
+Las \textbf{binarias astrométricas}, al igual que las espectroscópicas, solo
 muestran una componente visible al ser observada, al contrario de las binarias
 visibles. Sin embargo, una binaria astrométrica difiera de las otras dos
 categorías definidas en cuestión de su movimiento observado en la bóveda
@@ -52,5 +52,9 @@ celeste. Estas muestran un movimiento errático y no-lineal, algo que no se
 esperaría ver en una estrella solitaria dado su inercia según la primera ley de
 Newton. Estas perturbaciones son causadas por una estrella secundaria no
 aparente al observar el sistema. 
+
+\subsubsection{Binarias Eclipsantes}
+
+Una de las propiedades más importantes de identificar de un sistema binario es la \textit{inclinación} de su órbita con respecto a nuestra línea de visión desde el sitio de observación (ya sea la Tierra en caso de un observatorio terrestre o un punto lejano dentro del sistema solar para un telescopio espacial). En dado caso que un sistema tenga una inclinación 
 
 \subsection{Binarias en Contacto}
