Updated thesis title

--- a/Tesis.tex
+++ b/Tesis.tex
@@ -262,7 +262,7 @@
         \Large
 
         \vspace{5cm}
-        {\fontsize{25pt}{25}\textcolor{MyDarkBlue}{\textbf{Búsqueda y Estudio Fotométrico de Variables Cataclísmicas}}}
+        {\fontsize{25pt}{25}\textcolor{MyDarkBlue}{\textbf{Búsqueda y Estudio Fotométrico de Sistemas Binarios Eclipsantes}}}
 
         \vspace{1cm}
         {\fontsize{16pt}{16pt}Tesis de Maestría en Astrofísica Planetaria y
