--- a/ref.bib
+++ b/ref.bib
@@ -74,15 +74,22 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   doi             = {10.1086/500975}
 }
 
-@inbook{astronomyPhysicalPerspective_stellarOldAgeChapter,
-  AUTHOR    = {Marc L. Kutner},
-  TITLE     = {Astronomy A Physical Perspective},
-  PUBLISHER = {Cambridge University Press},
-  CHAPTER   = {Stellar old age},
-  EDITION   = {2},
-  YEAR      = {2017},
-  MONTH     = {February}
+
+@article{kurucz_atlas_1970,
+	title = {Atlas: a {Computer} {Program} for {Calculating} {Model} {Stellar} {Atmospheres}},
+	volume = {309},
+	issn = {0081-0320},
+	shorttitle = {Atlas},
+	url = {https://ui.adsabs.harvard.edu/abs/1970SAOSR.309.....K},
+	abstract = {The computer program ATLAS calculates model stellar atmospheres in radiative and convective equilibrium for the complete range of stellar temperatures. The apporximations used limit the program to plane-parallel, horizontally homogeneous, stedy-state, nonmoving atmospheres with energy and abundances constant with depth. The program has been written to allow detailed statistical equillibrium calculations, but only hydrogen continua and H- are coded at present. Most of the published continuous opacities and hydrogen lines have been included, and provision is made for adding others easily. There is also provision for treating line opacity as line absorption distribution functions. In Sections 2 through 7, we discuss all aspects of model atmosphere calculations in considerable detail. These include the radiation field, statistical equilibrium, thermodynamic properties, opacity, convection, and the temperature correction. In Sections 8 and 9, we discuss the computer program itself, by going first through a sample calculation and second through a technical discussion of the program coding and operation. The program was written in FORTRAN IV and is essentially machine independent. A listing is available on magnetic tape.},
+	urldate = {2024-03-05},
+	journal = {SAO Special Report},
+	author = {Kurucz, R. L.},
+	month = feb,
+	year = {1970},
+	note = {ADS Bibcode: 1970SAOSR.309.....K}
 }
+
 
 @book{astronomyPhysicalPerspective,
   AUTHOR    = {Marc L. Kutner},
