Commented out unused CV sections

--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -2,6 +2,6 @@
 
 \input{Introduccion/Estrella.tex}
 \input{Introduccion/SistemasBinarios.tex}
-\input{Introduccion/Subsecciones/VariablesCataclismicas.tex}
+% \input{Introduccion/Subsecciones/VariablesCataclismicas.tex}
 % \input{Introduccion/Subsecciones/EnanaBlanca.tex}
-\input{Introduccion/Subsecciones/EnanaRoja.tex}
+% \input{Introduccion/Subsecciones/EnanaRoja.tex}
