Slight reword Starting geometry of binary's section

--- a/Introduccion/SistemasBinarios.tex
+++ b/Introduccion/SistemasBinarios.tex
@@ -11,6 +11,29 @@ fenómenos que surgen mediante la interacción entre las componentes, tanto como
 la interacción gravitacional debido a sus masas, como a la física interesante
 que ocurre en el caso de interacciones de material entre una estrella a otra. 
 
+% TODO: incluir sección en cite?
+Los sistemas binarios estelares ofrecen un laboratorio celeste de gran
+importancia, ya que debido a la interacción a cortas escalas espaciales nos
+brindan información acerca de las estrellas que sería imposible obtener de otra
+manera. \citetbookchapter{phoebeScientificReference}{2.1} menciona varios
+parámetros derivados de observaciones de estos sistemas, como las masas de cada
+una de las componentes estelares por medio de su interacción gravitacional, la
+calibración y estudio de la evolución estelar y su dependencia de la masa y
+luminosidad de la estrella; dadas observaciones de sistemas desconectados, en el
+cual ambas componentes son de la misma edad pero con diferentes propiedades que
+influyen su camino evolutivo. La clasificación de estos sistemas se basa tanto
+en propiedades observacionales\textemdash las cuales dependen tanto de las
+propiedades geométricas del sistema como de nuestra capacidad de observación, en
+cuanto a la capacidad de la instrumentación disponible\textemdash como en las
+propiedades físicas del sistema, incluyendo la proximidad de las componentes
+como sus propiedades lumínica.
+
+\subsection{Geometría del Sistema}
+
+Para poder modelar de manera adecuada un sistema binario estelar se necesita
+conocer la forma geométrica del sistema, tanto sus propiedades orbitales como
+las formas de las componentes estelares. 
+
 \subsection{Clasificaciones Observacionales}
 
 Dependiendo del método de detección y las propiedades aparentes del sistema se
@@ -53,8 +76,8 @@ esperaría ver en una estrella solitaria dado su inercia según la primera ley d
 Newton. Estas perturbaciones son causadas por una estrella secundaria no
 aparente al observar el sistema. 
 
-\subsubsection{Binarias Eclipsantes}
+\subsection{Binarias Eclipsantes}
 
-Una de las propiedades más importantes de identificar de un sistema binario es la \textit{inclinación} de su órbita con respecto a nuestra línea de visión desde el sitio de observación (ya sea la Tierra en caso de un observatorio terrestre o un punto lejano dentro del sistema solar para un telescopio espacial). En dado caso que un sistema tenga una inclinación 
+Una de las propiedades más importantes de identificar de un sistema binario es la \textit{inclinación} de su órbita con respecto a nuestra línea de visión desde el sitio de observación (ya sea la Tierra en caso de un observatorio terrestre o un punto lejano dentro del sistema solar para un telescopio espacial). En dado caso que un sistema tenga una inclinación suficientemente alta se pueden observar eclipses dentro del sistema, en lo que una componente obscurece a su compañera de nuestra línea de visión. Estos eclipses se manifiestan como disminuciones en el flujo total del sistema, brindando información que no se obtendría sin esta perspectiva visual. 
 
 \subsection{Binarias en Contacto}
