--- a/ref.bib
+++ b/ref.bib
@@ -74,7 +74,6 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   doi             = {10.1086/500975}
 }
 
-
 @article{kurucz_atlas_1970,
 	title = {Atlas: a {Computer} {Program} for {Calculating} {Model} {Stellar} {Atmospheres}},
 	volume = {309},
@@ -90,6 +89,21 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
 	note = {ADS Bibcode: 1970SAOSR.309.....K}
 }
 
+@book{kallrath_eclipsing_binary_modelling_2009,
+	address = {New York, NY},
+	series = {Astronomy and {Astrophysics} {Library}},
+	title = {Eclipsing {Binary} {Stars}: {Modeling} and {Analysis}},
+	isbn = {978-1-4419-0698-4 978-1-4419-0699-1},
+	shorttitle = {Eclipsing {Binary} {Stars}},
+	url = {https://link.springer.com/10.1007/978-1-4419-0699-1},
+	language = {en},
+	urldate = {2024-03-06},
+	publisher = {Springer},
+	author = {Kallrath, Josef and Milone, Eugene F.},
+	year = {2009},
+	doi = {10.1007/978-1-4419-0699-1},
+	keywords = {astrophysics, binary modeling algorithms, binary modelling algorithms, eclipsing binary stars, exoplanet transits, fundamental data stars, light curve modelling, Star, stellar}
+}
 
 @book{astronomyPhysicalPerspective,
   AUTHOR    = {Marc L. Kutner},
@@ -125,6 +139,22 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   PUBLISHER      = {Cambridge University Press},
   TITLE          = {An Introduction to the Theory of Stellar Structure and Evolution},
   YEAR           = {2010}
+}
+
+
+@book{benacquista_introduction_to_evolution_single_binary_stars_2013,
+	address = {New York, NY},
+	series = {Undergraduate {Lecture} {Notes} in {Physics}},
+	title = {An {Introduction} to the {Evolution} of {Single} and {Binary} {Stars}},
+	isbn = {978-1-4419-9990-0 978-1-4419-9991-7},
+	url = {https://link.springer.com/10.1007/978-1-4419-9991-7},
+	language = {en},
+	urldate = {2024-03-06},
+	publisher = {Springer},
+	author = {Benacquista, Matthew},
+	year = {2013},
+	doi = {10.1007/978-1-4419-9991-7},
+	keywords = {compact binaries, evolution of stars, single and binary stars, star cluster dynamics, star formation, stellar birth, stellar evolution, stellar evolution explained, undergraduate text}
 }
 
 @ARTICLE{astropy,
